@@ -29,11 +29,13 @@ $ -> Language fix or change
 26-Aug-2012 Jean-Marie Simonet
  # [#28950] Code quality for mod_stats_admin, translated DB drivers. Thanks Michael
  # [#28962] Added colors to main icons in admin isis. Thanks Peter.
+ # [#28984] HRs in default layouts will change people's sites and are not semantic. Thanks Elin
+ # [#28853] Template fails to copy. Thanks Mark
 
 24-Aug-2012 Jean-Marie Simonet
  # [#28968] Missing JFolder class imports in CMS. Thanks Mark
  # [#28797] Code Cleanup - Smart Search. Thanks Michael
- # [#28449] captcha cause fatal error when the "captcha" field is not present in "configuration.php" after an upgrade. Thansk Elin.
+ # [#28449] captcha cause fatal error when the "captcha" field is not present in "configuration.php" after an upgrade. Thanks Elin.
  # [#28987] JToolbarButtonHelp doesn't work. Thanks Rouven
 
 23-Aug-2012 Mark Dexter
